syntax = "proto3";

package auth;

option go_package = "./pb";

message Login {
    message Request {
        string username = 1;
        string password = 2;
    }

    message Response {
        string accessToken = 1;
    }
}

service AuthService {
    rpc Login(Login.Request) returns (Login.Response) {}
}
