syntax = "proto3";

package user;

option go_package = "./pb";

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    bool success = 1;
}

message GetUserInfoRequest {
    string username = 1;
}

message GetUserInfoResponse {
    int32 id = 1;
    string username = 2;
    string createAt = 3;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}
